--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1189,6 +1189,7 @@ collections:
                                       name: "full-width",
                                       widget: "boolean",
                                       default: false,
+                                      required: false,
                                     },
                                   ],
                               },
