--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -34,6 +34,7 @@ collections:
           widget: "hidden",
           default: "blog-post",
         }
+      - { label: "Title", name: "title", widget: "string" },
       - {
           label: "Title Section",
           name: "title section",
