--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1310,8 +1310,8 @@ collections:
                                       name: "reference",
                                       widget: "relation",
                                       collection: "blog",
-                                      search_fields: ["title_section.title"],
-                                      value_field: "title_section.title",
+                                      search_fields: ["title"],
+                                      value_field: "title",
                                     },
                                   ],
                               },
