--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1312,6 +1312,13 @@ collections:
                                       search_fields: ["title"],
                                       value_field: "title",
                                     },
+                                    {
+                                      label: "Full Width",
+                                      name: "full-width",
+                                      widget: "boolean",
+                                      default: false,
+                                      required: false,
+                                    },
                                   ],
                               },
                               {
@@ -1352,6 +1359,13 @@ collections:
                                       search_fields: ["title"],
                                       value_field: "title",
                                       display_fields: ["title"],
+                                    },
+                                    {
+                                      label: "Full Width",
+                                      name: "full-width",
+                                      widget: "boolean",
+                                      default: false,
+                                      required: false,
                                     },
                                   ],
                               },
