--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1419,15 +1419,111 @@ collections:
             }
           - { label: "Title", name: "title", widget: "string" }
           - {
-              label: "About Image",
-              name: "about-image",
+              label: "Title Section",
+              name: "title section",
               widget: "object",
               fields:
                 [
                   {
-                    label: "Image",
-                    name: "image",
-                    widget: "image",
+                    label: "Subtitle",
+                    name: "subtitle",
+                    widget: "string",
+                    required: false,
+                  },
+                  {
+                    label: "Type",
+                    name: "type",
+                    widget: "string",
+                    required: false,
+                  },
+                  {
+                    label: "Location",
+                    name: "location",
+                    widget: "string",
+                    required: false,
+                  },
+                  {
+                    label: "Collaborators",
+                    name: "collaborators",
+                    widget: "string",
+                    required: false,
+                  },
+                  { label: "Date", name: "date", widget: "date" },
+                  {
+                    label: "Images",
+                    name: "images",
+                    widget: "list",
+                    required: false,
+                    types:
+                      [
+                        {
+                          label: "iFrame",
+                          name: "iframe",
+                          widget: "string",
+                          required: false,
+                        },
+                        {
+                          label: "Image",
+                          name: "image",
+                          widget: "object",
+                          fields:
+                            [
+                              {
+                                label: "Image File",
+                                name: "imageFile",
+                                widget: "image",
+                                required: false,
+                                allow_multiple: true,
+                              },
+                              {
+                                label: "Caption",
+                                name: "caption",
+                                widget: "string",
+                                required: false,
+                              },
+                            ],
+                        },
+                        {
+                          label: "Video",
+                          name: "video",
+                          widget: "object",
+                          fields:
+                            [
+                              {
+                                label: "Video File",
+                                name: "videoFile",
+                                widget: "file",
+                                required: false,
+                                allow_multiple: true,
+                              },
+                              {
+                                label: "Caption",
+                                name: "caption",
+                                widget: "string",
+                                required: false,
+                              },
+                            ],
+                        },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: "Cover",
+              name: "cover",
+              widget: "object",
+              fields:
+                [
+                  {
+                    label: "Video File",
+                    name: "videoFile",
+                    widget: file,
+                    required: false,
+                  },
+                  {
+                    label: "Fallback Image",
+                    name: "fallbackImage",
+                    widget: image,
                     required: false,
                   },
                   {
@@ -1438,7 +1534,203 @@ collections:
                   },
                 ],
             }
-          - { label: "Body", name: "body", widget: "markdown" }
+          - {
+              label: "description",
+              name: "Description",
+              widget: "markdown",
+              required: false,
+            }
+          - {
+              label: "Content",
+              name: "variable-content",
+              widget: "list",
+              required: false,
+              types:
+                [
+                  {
+                    label: "Image Section",
+                    name: "image-section",
+                    widget: "object",
+                    fields:
+                      [
+                        {
+                          label: "Column Start",
+                          name: "column-start",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "1",
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                            ],
+                        },
+                        {
+                          label: "Column End",
+                          name: "column-end",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                              "12",
+                              "13",
+                            ],
+                        },
+                        {
+                          label: "Images",
+                          name: "images",
+                          widget: "list",
+                          required: false,
+                          types:
+                            [
+                              {
+                                label: "iFrame",
+                                name: "iFrame",
+                                widget: "object",
+                                fields:
+                                  [
+                                    {
+                                      label: "iFrame Link",
+                                      name: "iFrame-link",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                    {
+                                      label: "Caption",
+                                      name: "caption",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                  ],
+                              },
+                              {
+                                label: "Image",
+                                name: "image",
+                                widget: "object",
+                                fields:
+                                  [
+                                    {
+                                      label: "Image File",
+                                      name: "imageFile",
+                                      widget: "image",
+                                      required: false,
+                                      allow_multiple: true,
+                                    },
+                                    {
+                                      label: "Caption",
+                                      name: "caption",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                  ],
+                              },
+                              {
+                                label: "Video",
+                                name: "video",
+                                widget: "object",
+                                fields:
+                                  [
+                                    {
+                                      label: "Video File",
+                                      name: "videoFile",
+                                      widget: "file",
+                                      required: false,
+                                      allow_multiple: true,
+                                    },
+                                    {
+                                      label: "Caption",
+                                      name: "caption",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                  ],
+                              },
+                            ],
+                        },
+                      ],
+                  },
+                  {
+                    label: "Text Section",
+                    name: "text-section",
+                    widget: "object",
+                    fields:
+                      [
+                        {
+                          label: "Column Start",
+                          name: "column-start",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "1",
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                            ],
+                        },
+                        {
+                          label: "Column End",
+                          name: "column-end",
+                          widget: "select",
+                          required: false,
+                          options:
+                            [
+                              "2",
+                              "3",
+                              "4",
+                              "5",
+                              "6",
+                              "7",
+                              "8",
+                              "9",
+                              "10",
+                              "11",
+                              "12",
+                              "13",
+                            ],
+                        },
+                        {
+                          label: "Big Size",
+                          name: "big-size",
+                          widget: "boolean",
+                          default: "false",
+                          required: false,
+                        },
+                        {
+                          label: "Text",
+                          name: "text",
+                          widget: "markdown",
+                          required: false,
+                        },
+                      ],
+                  },
+                ],
+            }
           - {
               label: "listes Infos",
               name: "listedInfos",
