--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -170,6 +170,7 @@ collections:
                 widget: "object",
                 fields:
                   [
+                    { label: "Title", name: "title", widget: "string" }
                     {
                       label: "Column Start",
                       name: "column-start",
@@ -290,6 +291,7 @@ collections:
                 widget: "object",
                 fields:
                   [
+                    { label: "Title", name: "title", widget: "string" }
                     {
                       label: "Column Start",
                       name: "column-start",
@@ -1534,6 +1536,7 @@ collections:
                     widget: "object",
                     fields:
                       [
+                        { label: "Title", name: "title", widget: "string" }
                         {
                           label: "Column Start",
                           name: "column-start",
@@ -1654,6 +1657,7 @@ collections:
                     widget: "object",
                     fields:
                       [
+                        { label: "Title", name: "title", widget: "string" }                      
                         {
                           label: "Column Start",
                           name: "column-start",
