--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -177,7 +177,7 @@ collections:
                 widget: "object",
                 fields:
                   [
-                    { label: "Title", name: "title", widget: "string" },
+                    { label: "Title", name: "title", widget: "string", required: false },
                     {
                       label: "Column Start",
                       name: "column-start",
@@ -298,7 +298,7 @@ collections:
                 widget: "object",
                 fields:
                   [
-                    { label: "Title", name: "title", widget: "string" },
+                    { label: "Title", name: "title", widget: "string", required: false },
                     {
                       label: "Column Start",
                       name: "column-start",
