--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -147,6 +147,77 @@ collections:
             ],
         }
       - {
+          label: "Cover-image",
+          name: "cover-image",
+          widget: "list",
+          required: false,
+          types:
+            [
+              {
+                label: "iFrame",
+                name: "iframe",
+                widget: "object",
+                fields:
+                  [
+                    {
+                      label: "iFrame Link",
+                      name: "iframe-link",
+                      widget: "string",
+                      required: false,
+                    },
+                    {
+                      label: "Caption",
+                      name: "caption",
+                      widget: "string",
+                      required: false,
+                    },
+                  ],
+              },
+              {
+                label: "Image",
+                name: "image",
+                widget: "object",
+                fields:
+                  [
+                    {
+                      label: "Image File",
+                      name: "imageFile",
+                      widget: "image",
+                      required: false,
+                      allow_multiple: true,
+                    },
+                    {
+                      label: "Caption",
+                      name: "caption",
+                      widget: "string",
+                      required: false,
+                    },
+                  ],
+              },
+              {
+                label: "Video",
+                name: "video",
+                widget: "object",
+                fields:
+                  [
+                    {
+                      label: "Video File",
+                      name: "videoFile",
+                      widget: "file",
+                      required: false,
+                      allow_multiple: true,
+                    },
+                    {
+                      label: "Caption",
+                      name: "caption",
+                      widget: "string",
+                      required: false,
+                    },
+                  ],
+              },
+            ],
+        }
+      - {
           label: "Cover",
           name: "cover",
           widget: "object",
