--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -147,7 +147,7 @@ collections:
             ],
         }
       - {
-          label: "Cover-image",
+          label: "Cover Image",
           name: "cover-image",
           widget: "list",
           required: false,
@@ -184,7 +184,6 @@ collections:
                       name: "imageFile",
                       widget: "image",
                       required: false,
-                      allow_multiple: true,
                     },
                     {
                       label: "Caption",
@@ -205,7 +204,6 @@ collections:
                       name: "videoFile",
                       widget: "file",
                       required: false,
-                      allow_multiple: true,
                     },
                     {
                       label: "Caption",
